# HonoursProject

./: .gitignore  CMakeLists.txt  CMakePresets.json  Example_HD.json  Example_HD_Analyse.json  HonoursProject.sln  OS_OpenRoads_GB.json  TODO.txt  all_analyse.json  all_test.json  chinese_cities.json  hongkong.json  logger.json  tests.json  uk_test.json  vcpkg.json
HonoursProject/: Analyser.cpp  Analyser.h  Analyser.hpp  Analysis.cpp  Analysis.h  Analysis.hpp  BUCHBuilder.cpp  BUCHBuilder.h  BUCHBuilder.hpp  BUContractionQueue.h  BUContractionQueue.hpp  BUContractionQueue.inl  BaseContractionGraph.cpp  BaseContractionGraph.h  BaseContractionGraph.hpp  BaseContractionGraph.inl  BaseGraph.h  BaseGraph.hpp  BaseGraph.inl  BottomUpCHBuilder.cpp  BottomUpCHBuilder.h  BuildTimesAnalyser.cpp  BuildTimesAnalyser.h  BuildTimesAnalyser.hpp  CICHBuilder.cpp  CICHBuilder.h  CICHBuilder.hpp  CIHierarchy.cpp  CIHierarchy.h  CIHierarchyBuilder.cpp  CIHierarchyBuilder.h  CIHierarchyBuilder.hpp  CachedPathSolverBuilder.h  CachedPathSolverBuilder.hpp  CachedPathSolverBuilder.inl  ContractionGraph.cpp  ContractionGraph.h  ContractionGraph.hpp  ContractionHierarchy.cpp  ContractionHierarchy.h  (+107 more)
data/: Hongkong.road-d
input/: chinese_cities.json  demo.json
